force-app/main/default/objects/Course_Session__c/Course_Session__c.object-meta.xml
<CustomObject>
    <description>BeADisciple.com Course Session</description>
    <label>BeADisciple.com Course Session</label>
    <nameField>
        <label>Course Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BeADisciple.com Course Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>