force-app/main/default/objects/Course_Session__c/fields/Actual_Instructor_Portion_Paid__c.field-meta.xml
<CustomField>
    <fullName>Actual_Instructor_Portion_Paid__c</fullName>
    <label>Actual Instructor Portion Paid</label>
    <summarizedField>Course_Enrollment__c.Instructor_Portion_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Course_Enrollment__c.Enrollment_Status__c</field>
        <operation>notEqual</operation>
        <value>Refunded, Transferred</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Enrollment__c.Course_Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>