force-app/main/default/objects/Course_Session__c/fields/Blackboard__c.field-meta.xml
<CustomField>
    <fullName>Blackboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blackboard</label>
    <type>Checkbox</type>
</CustomField>