force-app/main/default/objects/Course_Session__c/fields/Certificate_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Email_Date__c</fullName>
    <label>Certificate Email Date</label>
    <type>Date</type>
</CustomField>