force-app/main/default/objects/Course_Session__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipName>Course_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>