force-app/main/default/objects/Course_Session__c/fields/CEUs__c.field-meta.xml
<CustomField>
    <fullName>CEUs__c</fullName>
    <label>CEUs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>