force-app/main/default/objects/Course_Session__c/fields/Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Completion_Rate__c</fullName>
    <formula>Number_of_Students_Completed__c / Total_Complete_Incomplete_WIthdrawn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Session Completion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>