force-app/main/default/objects/Course_Session__c/fields/Course_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Display_Name__c</fullName>
    <formula>Disciple_Course__r.Course_Number__c  &amp; &quot; | &quot; &amp;  Disciple_Course__r.Name &amp; &quot; | &quot; &amp; TEXT( Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Display Name</label>
    <type>Text</type>
</CustomField>