force-app/main/default/objects/Course_Session__c/fields/Course_Min__c.field-meta.xml
<CustomField>
    <fullName>Course_Min__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Course Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>