force-app/main/default/objects/Course_Session__c/fields/Course_Session_SFID__c.field-meta.xml
<CustomField>
    <fullName>Course_Session_SFID__c</fullName>
    <formula>Id</formula>
    <inlineHelpText>Use this ID in the Formstack form.</inlineHelpText>
    <label>Course Session SFID</label>
    <type>Text</type>
</CustomField>