force-app/main/default/objects/Course_Session__c/fields/Course_URL__c.field-meta.xml
<CustomField>
    <fullName>Course_URL__c</fullName>
    <label>Course URL</label>
    <type>Url</type>
</CustomField>