force-app/main/default/objects/Course_Session__c/fields/Disciple_Course__c.field-meta.xml
<CustomField>
    <fullName>Disciple_Course__c</fullName>
    <label>Disciple Course</label>
    <referenceTo>Disciple_Course__c</referenceTo>
    <relationshipName>Course_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>