force-app/main/default/objects/Course_Session__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BeADisciple.com Course Sessions</relationshipLabel>
    <relationshipName>BeADisciple_com_Course_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>