force-app/main/default/objects/Course_Session__c/fields/Instructor_Override__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if Instructor doesn&apos;t require minimum amount of students.</inlineHelpText>
    <label>Instructor Override</label>
    <type>Checkbox</type>
</CustomField>