force-app/main/default/objects/Course_Session__c/fields/Number_of_Enrolled_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Enrolled_Students__c</fullName>
    <inlineHelpText>Does not include refunded or transferred students.</inlineHelpText>
    <label>Number of Enrolled Students</label>
    <summaryFilterItems>
        <field>Course_Enrollment__c.Enrollment_Status__c</field>
        <operation>notEqual</operation>
        <value>Refunded, Transferred</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Enrollment__c.Course_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>