force-app/main/default/objects/Course_Session__c/fields/Number_of_Students_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students_Completed__c</fullName>
    <description>Sum of all related Enrollments with Completed status</description>
    <inlineHelpText>Sum of all related Enrollments with Completed status</inlineHelpText>
    <label>Number of Students Completed</label>
    <summaryFilterItems>
        <field>Course_Enrollment__c.Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Enrollment__c.Course_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>