force-app/main/default/objects/Course_Session__c/fields/ODM_BeADisciple_Course__c.field-meta.xml
<CustomField>
    <fullName>ODM_BeADisciple_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ODM - BeADisciple Course</label>
    <referenceTo>BAD_Course__c</referenceTo>
    <relationshipName>Course_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>