force-app/main/default/objects/Course_Session__c/fields/ODM_Course_ID__c.field-meta.xml
<CustomField>
    <fullName>ODM_Course_ID__c</fullName>
    <label>ODM Course ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>