force-app/main/default/objects/Course_Session__c/fields/Required_books__c.field-meta.xml
<CustomField>
    <fullName>Required_books__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required books</label>
    <type>Checkbox</type>
</CustomField>