force-app/main/default/objects/Course_Session__c/fields/Skip_Opportunity_creation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Opportunity_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Opportunity creation</label>
    <type>Checkbox</type>
</CustomField>