force-app/main/default/objects/Course_Session__c/fields/Total_Complete_Incomplete_WIthdrawn__c.field-meta.xml
<CustomField>
    <fullName>Total_Complete_Incomplete_WIthdrawn__c</fullName>
    <description>Only counts enrollments with Complete, Incomplete and Withdrawn status. Used for Completion Rate formula</description>
    <inlineHelpText>Only counts enrollments with Complete, Incomplete and Withdrawn status. Used for Completion Rate formula</inlineHelpText>
    <label>Total Complete Incomplete WIthdrawn</label>
    <summaryFilterItems>
        <field>Course_Enrollment__c.Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Incomplete, Withdrawn, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Enrollment__c.Course_Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>