force-app/main/default/objects/Course_Session__c/fields/Total_Instructor_Portion__c.field-meta.xml
<CustomField>
    <fullName>Total_Instructor_Portion__c</fullName>
    <formula>Number_of_Enrolled_Students__c  *  Instructor_Portion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zTotal Instructor Portion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>