force-app/main/default/objects/Course_Session__c/fields/Zoom__c.field-meta.xml
<CustomField>
    <fullName>Zoom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zoom</label>
    <type>Checkbox</type>
</CustomField>