force-app/main/default/objects/Course_Session__c/validationRules/Portion_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Portion_Check</fullName>
    <active>false</active>
    <description>Checks if all IFD, Instructor and Sponsor portion are equal to the price.</description>
    <errorConditionFormula>Sponsor_Portion__c  +  IFD_Portion__c  +  Instructor_Portion__c  &lt;&gt;  Price__c</errorConditionFormula>
    <errorMessage>IFD, Instructor and Sponsor portion must add up and equal to the Price.</errorMessage>
</ValidationRule>