force-app/main/default/objects/Course_Session__c/listViews/Active_Courses_with_past_End_Date.listView-meta.xml
<ListView>
    <fullName>Active_Courses_with_past_End_Date</fullName>
    <columns>NAME</columns>
    <columns>Disciple_Course__c</columns>
    <columns>ODM_BeADisciple_Course__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Number_of_Enrolled_Students__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>&quot;Active&quot; Courses with past End Date</label>
</ListView>