force-app/main/default/objects/Course_Session__c/listViews/Course_Sessions_ending_soon.listView-meta.xml
<ListView>
    <fullName>Course_Sessions_ending_soon</fullName>
    <columns>NAME</columns>
    <columns>Disciple_Course__c</columns>
    <columns>ODM_BeADisciple_Course__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Number_of_Enrolled_Students__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <label>Course Sessions ending soon</label>
</ListView>